fix vertical align for rating

--- a/src/components/TVShowDetail/TVShowDetail.module.css
+++ b/src/components/TVShowDetail/TVShowDetail.module.css
@@ -1,10 +1,10 @@
-.title{
+.title {
   font-weight: 400;
   font-size: 3rem;
 }
 
 .rating {
-  margin-top: 5px;
+  margin-top: 7px;
   margin-left: 8px;
 }
 
@@ -26,7 +26,7 @@
   overflow-y: auto;
 }
 
-.overview::-webkit-scrollbar { 
+.overview::-webkit-scrollbar {
   width: 0;
   height: 0;
 }
